[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-zip"
version = "0.0.0.dev0"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Python function to construct a ZIP archive with stream processing - without having to store the entire ZIP in memory or disk"
readme = "README.md"
requires-python = ">=3.6.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "pycryptodome>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "coverage>=6.2",
    "pytest>=7.0.1",
    "pytest-cov>=3.0.0",
    "stream-unzip>=0.0.86",
    "pyzipper>=0.3.6",
    # Type checking
    "mypy>=0.971",
    'types-contextvars>=2.4.7.3; python_version<"3.7"',
]
ci = [
    "pycryptodome==3.10.1",
    "stream-unzip==0.0.86",
    "pyzipper==0.3.6",
    # Type checking
    "mypy==0.971",
    'types-contextvars==2.4.7.3; python_version<"3.7"',
]

[project.urls]
"Documentation" = "https://stream-zip.docs.trade.gov.uk/"
"Source" = "https://github.com/uktrade/stream-zip"

[tool.hatch.build]
include = [
  "stream_zip",
]
